# src/entities/index.ts
@@ -9,9 +9,6 @@ class CommonEnitity extends BaseEntity{
 
     @UpdateDateColumn({name:"updated_at"})
     updatedAt:string;
-
-    @DeleteDateColumn({name:"deleted_at"})
-    deletedAt:string
 }
 
 export default CommonEnitity;
